--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.16.2",
     "next": "15.3.5",
     "react": "^19.0.0",
